Prevent horizontal scroll bar

--- a/css/home.css
+++ b/css/home.css
@@ -8,6 +8,7 @@ body {
   font-size: 1.4rem;
   line-height: 1.4;
   margin: 0;
+  overflow-x: hidden;
 }
 
 /* Typography */
